# SDL2_Example_Learn

./: .gitignore  CMakeLists.txt  README.md
01_hello_SDL/: CMakeLists.txt
01_hello_SDL/src/: main.c  main.cpp
02_get_an_image_on_the_screen/: CMakeLists.txt
02_get_an_image_on_the_screen/src/: main.cpp
03_event_driven_programming/: CMakeLists.txt
03_event_driven_programming/src/: main.cpp
04_key_press/: CMakeLists.txt
04_key_press/src/: main.cpp
05_optimized_surface_loading_and_soft_stretching/: CMakeLists.txt
05_optimized_surface_loading_and_soft_stretching/src/: main.cpp
06_extension_libraries_and_loading_other_image_formats/: CMakeLists.txt
06_extension_libraries_and_loading_other_image_formats/src/: main.cpp
07_texture_loading_and_rendering/: CMakeLists.txt
07_texture_loading_and_rendering/src/: main.cpp
08_geometry_rendering/: CMakeLists.txt
08_geometry_rendering/src/: main.cpp
09_the_viewport/: CMakeLists.txt
09_the_viewport/src/: main.cpp
10_color_keying/: CMakeLists.txt
10_color_keying/src/: main.cpp  texture_manager.cpp  texture_mananger.h
11_clip_rendering_and_sprite_sheets/: CMakeLists.txt
11_clip_rendering_and_sprite_sheets/src/: main.cpp  texture_manager.cpp  texture_mananger.h
12_color_modulation/: CMakeLists.txt
12_color_modulation/src/: main.cpp  texture_manager.cpp  texture_mananger.h
13_alpha_blending/: CMakeLists.txt
13_alpha_blending/src/: main.cpp  texture_manager.cpp
14_animated_sprites_and_vsync/: CMakeLists.txt
14_animated_sprites_and_vsync/src/: main.cpp  texture_mananger.h
