cmake_minimum_required(VERSION 3.18)
project(SDL2Example C)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(01_hello_SDL)
add_subdirectory(02_get_an_image_on_the_screen)
add_subdirectory(03_event_driven_programming)
add_subdirectory(04_key_press)
add_subdirectory(05_optimized_surface_loading_and_soft_stretching)