cmake_minimum_required(VERSION 3.18)
project(SDL2Example C)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(01_hello_SDL)
add_subdirectory(02_get_an_image_on_the_screen)
add_subdirectory(03_event_driven_programming)
add_subdirectory(04_key_press)
add_subdirectory(05_optimized_surface_loading_and_soft_stretching)
add_subdirectory(06_extension_libraries_and_loading_other_image_formats)
add_subdirectory(07_texture_loading_and_rendering)
add_subdirectory(08_geometry_rendering)
add_subdirectory(09_the_viewport)
add_subdirectory(10_color_keying)
add_subdirectory(11_clip_rendering_and_sprite_sheets)
add_subdirectory(12_color_modulation)
add_subdirectory(13_alpha_blending)
add_subdirectory(14_animated_sprites_and_vsync)